# visdat13

./: CMakeLists.txt  InitGeoX.cpp  InitGeoX.h  README.txt  geoX.pro
assignments/: Experiment1_1.cpp  Experiment1_1.h  Experiment1_2.cpp  Experiment1_2.h  Experiment3_1.cpp  Experiment3_1.h  Experiment5_1.cpp  Experiment5_1.h  Experiment5_2.cpp  Experiment5_2.h  Experiment5_3.cpp  Experiment5_3.h  Experiment7_1.cpp  Experiment7_1.h  Experiment9_1.cpp  Experiment9_1.h
experiments/: ExampleExperiment.cpp  ExampleExperiment.h  ExampleExperiment2DGraphics.cpp  ExampleExperiment2DGraphics.h  ExampleExperiment3DGraphics.cpp  ExampleExperiment3DGraphics.h  ExampleExperimentFields.cpp  ExampleExperimentFields.h  ExampleExperimentMarchingCubes.cpp  ExampleExperimentMarchingCubes.h  ExampleExperimentScatterPlot.cpp  ExampleExperimentScatterPlot.h  ExerimentSimple.cpp  ExerimentSimple.h  Experiment.cpp  Experiment.h  Experiment1_1.cpp  Experiment1_1.h  Makefile  experiments.pro
geoX/: GeoXMainWindow.cpp  GeoXMainWindow.h  GeoXMainWindowDesigner.ui  Makefile  geoX.pro
gm_assignments/: GMExperiment2_1.cpp  GMExperiment2_1.h  GMExperiment6_1.cpp  GMExperiment6_1.h  GMExperiment8_1.cpp  GMExperiment8_1.h  GMExperiment8_3.cpp  GMExperiment8_3.h
images/: Makefile  geoX.qrc  images.pro
math/: BoundingBox.cpp  BoundingBox.h  BoundingBox.hpp  BoundingVolumeIntersection.h  DynamicLinearAlgebra.cpp  DynamicLinearAlgebra.h  DynamicLinearAlgebraTools.cpp  DynamicLinearAlgebraTools.h  DynamicLinearAlgebraTools.hpp  Dynamiclinearalgebra.hpp  Field2.hpp  Frustum.cpp  Frustum.h  GridData.hpp  HalfSpace.cpp  HalfSpace.h  HalfSpace.hpp  IterativeSolvers.cpp  IterativeSolvers.h  IterativeSolvers.hpp  LinearAlgebra.cpp  LinearAlgebra.h  LinearAlgebra.hpp  Makefile  MarchingCubes3D.cpp  MarchingCubes3D.h  PolarCoordinates.cpp  PolarCoordinates.h  Random.h  SparseLinearAlgebra.cpp  SparseLinearAlgebra.h  SparseLinearAlgebra.hpp  Sphere.h  ViewFrustum.cpp  ViewFrustum.h  math.pro
math/tnt/: jama_eig.h  jama_svd.h
system/: Makefile  system.pro
system/basics/: ClassCreator.cpp  ClassCreator.h  ClassEditor.cpp  ClassEditor.h  ClassMethods.cpp  ClassMethods.h  ClassProperty.cpp  ClassProperty.h  CopyObjectProperties.cpp  CopyObjectProperties.h  Delegate.h  ExceptionHandling.cpp  ExceptionHandling.h  Exceptions.h  HashTables.cpp  HashTables.h  HashTables.hpp  Makefile  MetaClass.cpp  MetaClass.h  Object.cpp  Object.h  PAssert.h  PTypes.h  Persistent.cpp  Persistent.h  basics.pro
system/gui/: ClassSelectionDialog.cpp  ClassSelectionDialog.h  Editor.h  FileDialogs.cpp  FileDialogs.h  GeneralKey.cpp  GeneralKey.h  GeoXOutput.cpp  GeoXOutput.h  KeyboardController.h  Makefile  MemberBrowser.cpp  MemberBrowser.h  MethodBrowser.cpp  MethodBrowser.h  Modifiers.cpp  Modifiers.h  MouseButtons.h  MouseController.h  ObjectBrowserWidget.cpp  ObjectBrowserWidget.h  ObjectBrowserWidgetDesigner.ui  ObjectCreationDialog.cpp  ObjectCreationDialog.h  ObjectCreationDialogDesigner.ui  ObjectViewsTable.cpp  ObjectViewsTable.h  PopupWindow.cpp  PopupWindow.h  PropertyBrowser.cpp  PropertyBrowser.h  VerticalScrollView.cpp  VerticalScrollView.h  gui.pro
system/misc/: AMLoader.cpp  AMLoader.hpp  ClassInstanceSet.cpp  ClassInstanceSet.h  ImageLoader.cpp  ImageLoader.h  Makefile  StringHelper.cpp  StringHelper.h  Timer.cpp  Timer.h  Tools.cpp  Tools.h  misc.pro  qtHelpers.cpp  qtHelpers.h  values_vs.h
system/properties/: BooleanClassProperty.cpp  BooleanClassProperty.h  BooleanElementEditor.cpp  BooleanElementEditor.h  BooleanPropertyEditor.cpp  BooleanPropertyEditor.h  ClassTypeClassProperty.cpp  ClassTypeClassProperty.h  ClassTypeClassPropertyEditorWidget.cpp  ClassTypeClassPropertyEditorWidget.h  ClassTypePropertyEditor.cpp  ClassTypePropertyEditor.h  CompoundClassProperty.cpp  CompoundClassProperty.h  ElementEditor.cpp  ElementEditor.h  EmbeddedObjectClassProperty.cpp  EmbeddedObjectClassProperty.h  EmbeddedObjectClassPropertyEditor.cpp  EmbeddedObjectClassPropertyEditor.h  EmbeddedObjectElementEditor.cpp  EmbeddedObjectElementEditor.h  EnumerationElementEditor.cpp  EnumerationElementEditor.h  EnumerationPropertyEditor.cpp  EnumerationPropertyEditor.h  FileNameElementEditor.cpp  FileNameElementEditor.h  FileNamePropertyEditor.cpp  FileNamePropertyEditor.h  FixedArrayClassProperty.cpp  FixedArrayClassProperty.h  FixedArrayElementEditor.cpp  FixedArrayElementEditor.h  FixedArrayPropertyEditor.cpp  FixedArrayPropertyEditor.h  Makefile  NumericalClassProperty.cpp  NumericalClassProperty.h  ObjectClassProperty.cpp  (+37 more)
system/streaming/: BinaryObjectStreams.cpp  BinaryObjectStreams.h  LegacyClassNameTranslation.cpp  LegacyClassNameTranslation.h  Makefile  ObjectStreams.cpp  ObjectStreams.h  StreamClassTable.cpp  StreamClassTable.h  streaming.pro
unix/: Makefile  kdevelop.sh  main.cpp  unix.kdevelop  unix.pro
viewers/: Makefile  viewers.pro
viewers/cameraControl/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  ExaminerCameraController.cpp  ExaminerCameraController.h  Makefile  WalkthroughCameraController.cpp  WalkthroughCameraController.h  cameraControl.pro
viewers/widgets/: GLGeometryViewer.cpp  GLGeometryViewer.h  GLGeometryViewer3D.cpp  GLGeometryViewer3D.h  GLGeometryViewer3DDesigner.ui  GLGeometryViewerDesigner.ui  GeoXGLWidget.cpp  GeoXGLWidget.h  GeoXGLWidget3D.cpp  GeoXGLWidget3D.h  LogoViewer.cpp  LogoViewer.h  LogoViewerDesigner.ui  Makefile  VisTypes.h  widgets.pro
windows/: GeoX.vcproj  GeoX.vcxproj  GeoX.vcxproj.filters  GeoX_VS2008.sln  GeoX_VS2010.sln  resource.h  stdafx.cpp  stdafx.h  winmain.cpp
